fix: resolve UUID to Long conversion error and add pricing rule controller